update stile minimal
immagini

--- a/classico.html
+++ b/classico.html
@@ -1008,7 +1008,7 @@
   <div class="footer-container">
       <!-- Sezione Spazi Belli -->
       <div class="footer-section">
-          <img src="../img/logo.png" class="logo-small">
+          <img src="img/logo.png" class="logo-small">
           <ul>
             <li><a href="privaci.html">Privacy</a></li>
             <li><a href="termini.html">Condizioni</a></li>
