--- a/minimal.html
+++ b/minimal.html
@@ -37,7 +37,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -392,13 +392,22 @@
         <!-- Carosello di immagini -->
         <div class="carosello">
           <div class="slide">
-            <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+            <img src="img/CAROSELLI/cucina-minimal.jpeg" alt="Immagine 1" onclick="openImage(this)">
           </div>
           <div class="slide">
-            <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+            <img src="img/CAROSELLI/salotto-minimal.jpeg" alt="Immagine 2" onclick="openImage(this)">
           </div>
           <div class="slide">
-            <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+            <img src="img/CAROSELLI/saladapranzo-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          </div>
+          <div class="slide">
+            <img src="img/CAROSELLI/camera-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          </div>
+          <div class="slide">
+            <img src="img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          </div>
+          <div class="slide">
+            <img src="img/CAROSELLI/bagno-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
           </div>
       
           <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
@@ -743,7 +752,7 @@
         <!-- Card 1: Cucina Bauhaus -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-minimal.jpeg" alt="Cucina Bauhaus">
+                <img src="img/CAROSELLI/cucina-minimal.jpeg" alt="Cucina Bauhaus">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina Bauhaus</h3>
@@ -757,7 +766,7 @@
         <!-- Card 2: Salotto minimal line -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-minimal.jpeg" alt="Salotto minimal line">
+                <img src="img/CAROSELLI/salotto-minimal.jpeg" alt="Salotto minimal line">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto minimal line</h3>
@@ -772,7 +781,7 @@
         <!-- Card 3: Sala da pranzo legno e luce -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-minimal.jpeg" alt="Sala da pranzo legno e luce">
+                <img src="img/CAROSELLI/saladapranzo-minimal.jpeg" alt="Sala da pranzo legno e luce">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo legno e luce</h3>
@@ -787,7 +796,7 @@
         <!-- Card 4: Camera da letto Eclisse-->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/camera-minimal.jpeg" alt="Camera da letto Eclisse">
+                <img src="img/CAROSELLI/camera-minimal.jpeg" alt="Camera da letto Eclisse">
             </div>
             <div class="ambiente-info">
                 <h3>Camera da letto Eclisse</h3>
@@ -801,7 +810,7 @@
         <!-- Card 5: Cameretta white dream -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Cameretta white dream">
+                <img src="img/CAROSELLI/cameretta-minimal.jpeg" alt="Cameretta white dream">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta white dream</h3>
@@ -815,7 +824,7 @@
         <!-- Card 6: Bagno soft minimal -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/bagno 2.1.jpeg" alt="Bagno soft minimal">
+                <img src="img/CAROSELLI/bagno 2.1.jpeg" alt="Bagno soft minimal">
             </div>
             <div class="ambiente-info">
                 <h3>Bagno soft minimal</h3>
@@ -1076,7 +1085,7 @@
   <div class="footer-container">
       <!-- Sezione Spazi Belli -->
       <div class="footer-section">
-          <img src="../img/logo.png" class="logo-small">
+          <img src="img/logo.png" class="logo-small">
           <ul>
             <li><a href="privaci.html">Privacy</a></li>
               <li><a href="termini.html">Condizioni</a></li>
