update stile industriale
immagini

--- a/industriale.html
+++ b/industriale.html
@@ -37,7 +37,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -394,14 +394,23 @@
    <!-- Carosello di immagini -->
    <div class="carosello">
      <div class="slide">
-       <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+       <img src="img/CAROSELLI/cucina-industriale.jpeg" alt="Immagine 1" onclick="openImage(this)">
      </div>
      <div class="slide">
-       <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+       <img src="img/CAROSELLI/salotto-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
      </div>
      <div class="slide">
-       <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+       <img src="img/CAROSELLI/saladapranzo-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
      </div>
+     <div class="slide">
+      <img src="img/CAROSELLI/camera-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
+    </div>
+    <div class="slide">
+      <img src="img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
+    </div>
+    <div class="slide">
+      <img src="img/CAROSELLI/bagno-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
+    </div>
  
      <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
      <button class="next" onclick="changeSlide(1)">&#10095;</button>
@@ -740,7 +749,7 @@
         <!-- Card 1: Cucina Bricks -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-industriale.jpeg" alt="Cucina Bricks">
+                <img src="img/CAROSELLI/cucina-industriale.jpeg" alt="Cucina Bricks">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina Bricks</h3>
@@ -755,7 +764,7 @@
         <!-- Card 2: Salotto industrial loft -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-industriale.jpeg" alt="Salotto industrial loft">
+                <img src="img/CAROSELLI/salotto-industriale.jpeg" alt="Salotto industrial loft">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto Industrial loft</h3>
@@ -770,7 +779,7 @@
         <!-- Card 3: Sala da pranzo bistrot -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-industriale.jpeg" alt="Sala da pranzo bistrot">
+                <img src="img/CAROSELLI/saladapranzo-industriale.jpeg" alt="Sala da pranzo bistrot">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo bistrot</h3>
@@ -785,7 +794,7 @@
         <!-- Card 4: Camera da letto urban -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/camera-industriale.jpeg" alt="Camera da letto urban">
+                <img src="img/CAROSELLI/camera-industriale.jpeg" alt="Camera da letto urban">
             </div>
             <div class="ambiente-info">
                 <h3>Camera da letto urban</h3>
@@ -799,7 +808,7 @@
         <!-- Card 5: Cameretta bike -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Cameretta bike">
+                <img src="img/CAROSELLI/cameretta-industriale.jpeg" alt="Cameretta bike">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta bike</h3>
@@ -814,7 +823,7 @@
         <!-- Card 6: Bagno acqua e forma -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/bagno-industriale.jpeg" alt="Bagno acqua e forma">
+                <img src="img/CAROSELLI/bagno-industriale.jpeg" alt="Bagno acqua e forma">
             </div>
             <div class="ambiente-info">
                 <h3>Bagno acqua e forma</h3>
@@ -1075,7 +1084,7 @@
     <div class="footer-container">
         <!-- Sezione Spazi Belli -->
         <div class="footer-section">
-            <img src="../img/logo.png" class="logo-small">
+            <img src="img/logo.png" class="logo-small">
             <ul>
               <li><a href="privaci.html">Privacy</a></li>
               <li><a href="termini.html">Condizioni</a></li>
