update stile minimal 2

--- a/minimal.html
+++ b/minimal.html
@@ -824,7 +824,7 @@
         <!-- Card 6: Bagno soft minimal -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="img/CAROSELLI/bagno 2.1.jpeg" alt="Bagno soft minimal">
+                <img src="img/CAROSELLI/bagno-minimal.jpeg" alt="Bagno soft minimal">
             </div>
             <div class="ambiente-info">
                 <h3>Bagno soft minimal</h3>
