update stile contemporaneo
immagini

--- a/contemporaneo.html
+++ b/contemporaneo.html
@@ -38,7 +38,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -394,13 +394,22 @@
         <!-- Carosello di immagini -->
         <div class="carosello">
           <div class="slide">
-            <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+            <img src="img/CAROSELLI/cucina-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
           </div>
           <div class="slide">
-            <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+            <img src="img/CAROSELLI/salotto-contemporaneo.jpeg" alt="Immagine 2" onclick="openImage(this)">
           </div>
           <div class="slide">
-            <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+            <img src="img/CAROSELLI/saladapranzo-contemporanea.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          </div>
+          <div class="slide">
+            <img src="img/CAROSELLI/camera-contemporanea.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          </div>
+          <div class="slide">
+            <img src="img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          </div>
+          <div class="slide">
+            <img src="img/CAROSELLI/bagno-contemporaneo.jpeg" alt="Immagine 3" onclick="openImage(this)">
           </div>
       
           <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
@@ -740,7 +749,7 @@
         <!-- Card 1: Cucina grigio quarzo -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-contemporanea.jpeg" alt="Cucina grigio quarzo">
+                <img src="img/CAROSELLI/cucina-contemporanea.jpeg" alt="Cucina grigio quarzo">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina grigio quarzo</h3>
@@ -755,7 +764,7 @@
         <!-- Card 2: Salotto scala di luce -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-contemporaneo.jpeg" alt="Salotto scala di luce">
+                <img src="img/CAROSELLI/salotto-contemporaneo.jpeg" alt="Salotto scala di luce">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto scala di luce</h3>
@@ -770,7 +779,7 @@
         <!-- Card 3: Sala da pranzo fusion style-->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-contemporanea.jpeg" alt="Sala da pranzo fusion style">
+                <img src="img/CAROSELLI/saladapranzo-contemporanea.jpeg" alt="Sala da pranzo fusion style">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo fusion style</h3>
@@ -785,7 +794,7 @@
         <!-- Card 4: Camera da letto fiori di seta -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/camera-contemporanea.jpeg" alt="Camera da letto fiori di seta">
+                <img src="img/CAROSELLI/camera-contemporanea.jpeg" alt="Camera da letto fiori di seta">
             </div>
             <div class="ambiente-info">
                 <h3>Camera da letto fiori di seta</h3>
@@ -800,7 +809,7 @@
         <!-- Card 5: Cameretta neo spazio -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Cameretta neo spazio">
+                <img src="img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Cameretta neo spazio">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta neo spazio</h3>
@@ -815,7 +824,7 @@
         <!-- Card 6: Bagno essenza -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/bagno-contemporaneo.jpeg" alt="Bagno essenza">
+                <img src="img/CAROSELLI/bagno-contemporaneo.jpeg" alt="Bagno essenza">
             </div>
             <div class="ambiente-info">
                 <h3>Bagno essenza</h3>
